--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,11 @@
 {
-  "name": "doClientApp",
+  "name": "yelpRedesign",
   "version": "1.0.0",
   "dependencies": {
     "jquery": "~2.1.4",
     "angular": "~1.3.19",
     "angular-touch": "~1.3.19",
     "angular-sanitize": "~1.3.19",
-    "angular-animate": "~1.3.19",
     "angular-mocks": "~1.3.19",
     "angular-ui-router": "~0.2.15",
     "ui-router-extras": "~0.0.14",
